maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  while (!isOnBaggle()){
    keepHandOnSideWall()
  }
}



def keepHandOnSideWall(){
  while (isFacingWall() || !isBackingWall()){
    left()
  }
}